# Matrix-Operations

./: CMakeLists.txt  bindings.cpp  main.cpp  main.py  readme.md
include/: DiagonalMatrix.hpp  Matrix.hpp  SquareMatrix.hpp
python/: main.py
